# Oxide

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: gpt2.rs  main.rs  models.rs  test.rs
static/: index.html
