[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "1.16"
ndarray = "0.16"
serde_json = "1.0"
once_cell = "1.20"
hyper = { version = "1.5", features = ["full"] }
tokio = { version = "1.40", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
