[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
ort = { version="2.0.0-rc.8" }
tracing = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rand = "0.8"
ndarray = "0.16"
tokenizers = "0.20"
serde_json = "1.0"
once_cell = "1.20"
hyper = { version = "1.5", features = ["full"] }
tokio = { version = "1.40", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[features]
load-dynamic = [ "ort/load-dynamic" ]
cuda = [ "ort/cuda" ]
